@@ -8,7 +8,7 @@
     <ProjectGuid>{87A24EB3-D890-481F-A3FC-1A82C0CA3EB5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AjAgents.Console</RootNamespace>
+    <RootNamespace>AjAgents.WebCrawler</RootNamespace>
     <AssemblyName>AjAgents.Console</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
